fix: UILD-253: whitespace stylefix

--- a/src/components/MarcField/MarcField.scss
+++ b/src/components/MarcField/MarcField.scss
@@ -1,7 +1,11 @@
 .marc-field {
   vertical-align: top;
-  
+
   .field-code {
     font-weight: bold;
+  }
+
+  .field-contents {
+    white-space: pre-wrap;
   }
 }
